--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   background-color: #eee !important;
   margin-left: 7px;
   margin-right: 7px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
   border-radius: 5px;
 }
 
@@ -16,9 +16,13 @@ h1 {
   text-align: center;
 }
 
-/* h2 {
-
-} */
+h2 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.17em;
+  text-align: center;
+  margin: 50px 0;
+}
 
 .sub-title-text {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -35,7 +39,6 @@ h1 {
 
 #image {
   max-width: 100%;
-  /* align-content: center; */
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -47,4 +50,36 @@ h1 {
   text-align: center;
   font-size: 1rem;
   margin: 15px 0;
+}
+
+
+
+/* solution by freeCodeCamp, try centering it on your own! */
+ul {
+  /* The max-width causes the ul list to collapse */
+  max-width: 550px;
+  /* centers the list */
+  margin: 0 auto 50px auto;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+}
+
+li {
+  margin-bottom: 20px;
+  line-height: 25px;
+}
+
+#quote {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  margin: 0 auto 50px auto;
+  font-style: italic;
+  max-width: 525px;
+  line-height: 25px;
+}
+
+#final-h2 {
+  padding-bottom: 30px;
 }
